--- a/Changes
+++ b/Changes
@@ -2,4 +2,4 @@ Revision history for Perinci-Examples-Bin
 
 0.01     2012-12-22 (SHARYANTO) (not yet released)
 
-         First release. Split from Perinci-Examples.
+         - First release. Split from Perinci-Examples.
