--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Perinci-Examples-Bin
 
-0.01     2012-12-22 (SHARYANTO) (not yet released)
+0.01     2012-12-22 (SHARYANTO)
 
          - First release. Split from Perinci-Examples.
