--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perinci-Examples-Bin
 
+0.02     2013-11-14 (SHARYANTO)
+
+         - Add script: peri-eg-complete-fruits.
+
+         - Add Synopsis to scripts.
+
+
 0.01     2012-12-22 (SHARYANTO)
 
          - First release. Split from Perinci-Examples.
