--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perinci-Examples-Bin
 
+0.03     2014-07-03 (SHARYANTO)
+
+         - Add script: peri-eg-test-common-opts.
+
+
 0.02     2013-11-14 (SHARYANTO)
 
          - Add script: peri-eg-complete-fruits.
