--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Perinci-Examples-Bin-Classic
 
+0.07    2015-09-03 (PERLANCAR)
+
+	- No functional changes.
+
+	- [dist] Move spec prereqs from RuntimeRequires to
+	  DevelopRecommends to reduce deps but still allow indicating spec
+	  requirement.
+
+
 0.06    2015-02-06 (PERLANCAR)
 
 	- Rename module/dist from Perinci::Examples::Bin to
