--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.07    2015-09-03 (PERLANCAR)
+0.07    2015-09-03  Released-By: PERLANCAR
 
 	- No functional changes.
 
@@ -7,19 +7,19 @@
 	  requirement.
 
 
-0.06    2015-02-06 (PERLANCAR)
+0.06    2015-02-06  Released-By: PERLANCAR
 
 	- Rename module/dist from Perinci::Examples::Bin to
           Perinci::Examples::Bin::Classic to adjust to Perinci::CmdLine ->
           Perinci::CmdLine::Classic rename.
 
 
-0.05    2014-11-20 (PERLANCAR)
+0.05    2014-11-20  Released-By: PERLANCAR
 
         - Add script: peri-eg-demo-cli-opts.
 
 
-0.04    2014-10-30 (PERLANCAR)
+0.04    2014-10-30  Released-By: PERLANCAR
 
 	- Add scripts: peri-eg-{append,read,write}-file (using the Stream
 	  variant).
@@ -29,18 +29,18 @@
 	- Add script: peri-eg-gen-random-bytes.
 
 
-0.03     2014-07-03 (SHARYANTO)
+0.03     2014-07-03  Released-By: SHARYANTO
 
          - Add script: peri-eg-test-common-opts.
 
 
-0.02     2013-11-14 (SHARYANTO)
+0.02     2013-11-14  Released-By: SHARYANTO
 
          - Add script: peri-eg-complete-fruits.
 
          - Add Synopsis to scripts.
 
 
-0.01     2012-12-22 (SHARYANTO)
+0.01     2012-12-22  Released-By: SHARYANTO
 
          - First release. Split from Perinci-Examples.
